force-app/main/default/objects/CB_Funding_Round__c/CB_Funding_Round__c.object-meta.xml
<CustomObject>
    <description>Crunchbase Data for Funding Rounds</description>
    <label>Funding Round</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Funding Round ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Rounds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>