force-app/main/default/objects/CB_Funding_Round__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Rounds</relationshipLabel>
    <relationshipName>Funding_Rounds</relationshipName>
    <type>Lookup</type>
</CustomField>