force-app/main/default/objects/CB_Funding_Round__c/fields/Announced_on__c.field-meta.xml
<CustomField>
    <fullName>Announced_on__c</fullName>
    <label>Announced on</label>
    <required>true</required>
    <type>Date</type>
</CustomField>