force-app/main/default/objects/CB_Funding_Round__c/fields/Investor_Count__c.field-meta.xml
<CustomField>
    <fullName>Investor_Count__c</fullName>
    <label>Investor Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>