force-app/main/default/objects/CB_Funding_Round__c/fields/Investor_Names__c.field-meta.xml
<CustomField>
    <fullName>Investor_Names__c</fullName>
    <label>Investor Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>