force-app/main/default/objects/CB_Funding_Round__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <referenceTo>CB_Organization__c</referenceTo>
    <relationshipLabel>Funding Rounds</relationshipLabel>
    <relationshipName>Funding_Rounds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>