force-app/main/default/objects/CB_Funding_Round__c/fields/Post_Money_Valuation_Currency__c.field-meta.xml
<CustomField>
    <fullName>Post_Money_Valuation_Currency__c</fullName>
    <label>Post Money Valuation Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>