force-app/main/default/objects/CB_Funding_Round__c/fields/Post_Money_Valuation_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Money_Valuation_Currency_Code__c</fullName>
    <label>Post Money Valuation Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>