force-app/main/default/objects/CB_Funding_Round__c/fields/Raised_Amount_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Raised_Amount_Currency_Code__c</fullName>
    <label>Raised Amount Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>