force-app/main/default/objects/CB_Funding_Round__c/fields/Raised_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Raised_Amount_USD__c</fullName>
    <label>Raised Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>