force-app/main/default/objects/CB_Funding_Round__c/fields/Target_Money_Raised_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Target_Money_Raised_Currency_Code__c</fullName>
    <label>Target Money Raised Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>