force-app/main/default/objects/CB_Funding_Round__c/fields/Target_Money_Raised_USD__c.field-meta.xml
<CustomField>
    <fullName>Target_Money_Raised_USD__c</fullName>
    <label>Target Money Raised USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>