force-app/main/default/objects/CB_Funding_Round__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>angel</fullName>
            </value>
            <value>
                <fullName>convertible_note</fullName>
            </value>
            <value>
                <fullName>debt_financing</fullName>
            </value>
            <value>
                <fullName>equity_crowdfunding</fullName>
            </value>
            <value>
                <fullName>grant</fullName>
            </value>
            <value>
                <fullName>non_equity_assistance</fullName>
            </value>
            <value>
                <fullName>post_ipo_debt</fullName>
            </value>
            <value>
                <fullName>post_ipo_equity</fullName>
            </value>
            <value>
                <fullName>private_equity</fullName>
            </value>
            <value>
                <fullName>product_crowdfunding</fullName>
            </value>
            <value>
                <fullName>secondary_market</fullName>
            </value>
            <value>
                <fullName>seed</fullName>
            </value>
            <value>
                <fullName>undisclosed</fullName>
            </value>
            <value>
                <fullName>venture</fullName>
            </value>
            <value>
                <fullName>initial_coin_offering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>